--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
 	"require": {
-	    "silex/silex": "~2.0"
+	    "silex/silex": "~2.0",
+		"php-di/silex-bridge": "2.0.0-beta1",
+		"twig/twig": "~2.0"
 	},
 	"autoload": {
         "psr-4": {
