--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,9 @@
 	"require": {
 	    "silex/silex": "~2.0",
 		"php-di/silex-bridge": "2.0.0-beta1",
-		"twig/twig": "~2.0"
+		"twig/twig": "~2.0",
+		"purekid/mongodm": "dev-master",
+		"respect/validation": "~1.1.12"
 	},
 	"autoload": {
         "psr-4": {
